--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h2>Stream Announcer Settings</h2>
+<hr />
 
 <div class="row">
     <div class="col-md-12">
@@ -11,7 +12,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
 
             <div style="display:flex;" class="form-group">
-                <label asp-for="Enabled" style="margin: 0 20px 0 0;" class="font-size-small"></label>
+                <label asp-for="Enabled" class="font-size-small small-margin-right"></label>
                 <label class="switch" />
                 <input asp-for="Enabled" type="checkbox" />
                 <div class="slider round"></div>
