--- a/src/Volvox.Helios.Web/Views/Settings/StreamerRoleSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerRoleSettings.cshtml
@@ -12,7 +12,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
 
             <div style="display:flex;" class="form-group">
-                <label asp-for="Enabled" style="margin: 0 20px 0 0;" class="font-size-small"></label>
+                <label asp-for="Enabled" class="font-size-small small-margin-right"></label>
                 <label class="switch" />
                 <input asp-for="Enabled" type="checkbox" />
                 <div class="slider round"></div>
