--- a/src/Volvox.Helios.Web/wwwroot/css/site.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/site.css
@@ -30,13 +30,18 @@
     }
 }
 
-/***** Varying vertical margin sizes *****/
+/**************** Margins ****************/
 .vertical-margin-large {
     margin: 40px 0;
 }
 .vertical-margin-medium {
     margin: 20px 0;
 }
+
+.small-margin-right {
+  margin: 0 20px 0 0;
+}
+
 /*****************************************/
 
 /********** Varying font sizes ***********/
